[metadata]
name = bravissimo
summary = Bravissimo
license = Apache-2
description-file =
    README.md
author = Spanish National Research Council - CSIC
author-email =  datathon-masterdatascience@listas.csic.es
home-page = https://github.com/masterdatascienceifca/eu-datathon
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    bravissimo

[entry_points]
console_scripts =
    bravissimo-api=bravissimo.cmd.api:main

[pbr]
# Have pbr generate the module indexes like sphinx autodoc
autodoc_index_modules = True
